# python-py2neo_compat

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  docker-compose.yml  py2neo-2.0.9.patch  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/py2neo_compat/: __init__.py  py2neo_compat.py  py2neo_compat_v1.py  py2neo_compat_v2.py  py2neo_compat_v2021.py  schema.py  schema_v1.py  schema_v2.py  schema_v2021.py  util.py
tests/: __init__.py  conftest.py  test_py2neo_compat.py  test_schema.py  test_schema_v1.py  test_util.py
